--- a/css/responsive.css
+++ b/css/responsive.css
@@ -32,9 +32,21 @@
     .label p {
         opacity: 0;
     }
+
+    /* 7 MECANIQUES */
+
+    /* OBSERVATIONS */
+
+    .post-its p,
+    .post-it .strong,
+    .post-it .subtitle,
+    .post-its li {
+        padding-top: 10px;
+    }
+
 }
 
-@media screen and (max-width: 1023px) {
+@media screen and (max-width: 999px) {
 
     /* TITLE-BOX */
 
@@ -49,7 +61,20 @@
         width: 100%;
     }
 
+    /* POST-IT */
+
+    .post-it {
+        width: 340px;
+    }
+
+    .post-its .container {
+        width: 280px;
+        padding: 0 !important;
+    }
+
 }
+
+@media screen and (max-width: 840px) {}
 
 /* /////////////// MOBIL /////////////// */
 
@@ -182,21 +207,6 @@
     }
 
     /* OBSERVATIONS */
-    .observations .bg {
-        height: 100% !important;
-    }
-
-    .post-it {
-        position: initial;
-        width: 375px;
-        min-height: 0px;
-        margin: 0 auto;
-    }
-
-    .post-its .container {
-        padding: 0;
-        width: 325px;
-    }
 
     .subtitle,
     .legende {
@@ -248,7 +258,7 @@
 
 /* /////////////// TABLET /////////////// */
 
-@media screen and (min-width: 760px) and (max-width: 1023px) {
+@media screen and (min-width: 760px) and (max-width: 999px) {
 
     .h1,
     .h1 span {
@@ -279,24 +289,203 @@
 
     /* /// 7 MECANIQUES /// */
 
-    /* HYPOTHESES */
+    /* / HYPOTHESES / */
 
     .mp .hypothese .bg {
         background-position: left 5%, 28% 15%;
     }
 
-    /* OBSERVATIONS */
+    /* / OBSERVATIONS / */
 
-    .post-it {
-        width: 380px;
+    /* CE */
+    .ce .observations .bg {
+        height: 1000px;
     }
 
-    .post-its .container {
-        padding: 0;
-        width: 320px;
+    .post-its .contrat {
+        right: 50px;
     }
 
-    /* LINKS-BOX */
+    .post-its .co-financement {
+        top: 250px;
+        right: -20px;
+    }
+
+    .post-its .inter-collectivites {
+        top: 390px;
+        left: 50px;
+    }
+
+    .post-its .coordination {
+        top: 740px;
+        left: 390px;
+    }
+
+    .post-its .adhesion {
+        left: -20px;
+        top: 610px;
+    }
+
+    /* MP */
+    .mp .observations .bg {
+        background-position: 90% 0%, 110% 45%, 110% 100%, 0% 75%;
+        height: 1350px;
+    }
+
+    .post-its .design {
+        top: -20px;
+        right: 450px;
+    }
+
+    .post-its .coaching {
+        top: 250px;
+        right: -25px;
+    }
+
+    .post-its .sociologie {
+        top: 430px;
+        left: 40px;
+    }
+
+    .post-its .politiques {
+        top: 820px;
+        right: -20px;
+    }
+
+    .post-its .education {
+        top: 1090px;
+    }
+
+    /* P */
+    .p .observations .bg {
+        height: 800px;
+    }
+
+    .post-its .travail {
+        right: 120px;
+    }
+
+    .post-its .pedagogie {
+        top: 430px;
+        left: -20px;
+    }
+
+    /* A */
+    .a .observations .bg {
+        background-position: 0% 0%, 120% 24%, 64% 36%, 0% 70%, 100% 100%;
+        height: 1400px;
+    }
+
+    .post-its .second {
+        right: 250px;
+    }
+
+    .post-its .superieur {
+        top: -20px;
+        right: -10px;
+    }
+
+    .post-its .ouvert {
+        top: 515px;
+        left: -20px;
+    }
+
+    .post-its .semi-pro {
+        top: 650px;
+        right: -30px;
+    }
+
+    .post-its .collectif {
+        top: 1040px;
+    }
+
+    .post-its .formation {
+        left: 390px;
+        top: 870px;
+    }
+
+    /* CC */
+    .cc .observations .bg {
+        background-position: 0% 2%, 95% 23%, -10% 35%, 130% 40%, 100% 79%, 0% 98%;
+        height: 2200px;
+    }
+
+    .post-its .metz {
+        top: 210px;
+        left: 40px;
+    }
+
+    .post-its .lille {
+        right: -20px;
+        top: -20px;
+    }
+
+    .post-its .mulhouse {
+        top: 915px;
+        right: 450px;
+    }
+
+    .post-its .strasbourg {
+        top: 980px;
+        right: 70px;
+    }
+
+    .post-its .paris {
+        top: 1760px;
+        left: 415px;
+    }
+
+    .post-its .dunkerque {
+        top: 1365px;
+        right: 393px;
+    }
+
+    /* E */
+    .e .observations .bg {
+        background-position: 0% 0%, 110% 46%, 60% 100%;
+    }
+
+    .post-its .ecosysteme {
+        top: -30px;
+        right: 30px;
+    }
+
+    .post-its .acteurs {
+        left: 40px;
+        top: 330px;
+    }
+
+    .post-its .grand-est {
+        top: 650px;
+        left: 460px;
+    }
+
+    .post-its .e-dunkerque {
+        top: 730px;
+        right: 450px;
+    }
+
+    /* FL */
+    .fl .observations .bg {
+        background-position: 0% 5%, 90% 56%, 40% 100%, 0% 83%;
+    }
+
+    .post-its .iterations {
+        top: 340px;
+        left: 20px;
+    }
+
+    .post-its .impliquation {
+        right: 10px;
+        top: 0px;
+    }
+
+    .post-its .exception {
+        top: 930px;
+        right: -20px;
+    }
+
+    /* / LINKS-BOX / */
 
     .links-box {
         background-size: 100px;
@@ -313,7 +502,7 @@
 
 }
 
-@media screen and (min-width: 1024px) and (max-width: 1200px) {
+@media screen and (min-width: 1000px) and (max-width: 1200px) {
 
     .h1,
     .h1 span {
@@ -325,4 +514,120 @@
         display: flex;
     }
 
+    /* POST-IT */
+
+    .post-it {
+        width: 360px;
+    }
+
+    .post-its .container {
+        width: 300px;
+        padding: 0 !important;
+    }
+
+    /* CE */
+
+    .post-its .contrat {
+        right: 150px;
+    }
+
+    .post-its .co-financement {
+        right: -20px;
+    }
+
+    /* MP */
+    .post-its .design {
+        right: 230px;
+    }
+
+    .post-its .coaching {
+        right: -25px;
+    }
+
+    /* P */
+    .post-its .travail {
+        right: 220px;
+    }
+
+    /* A */
+    .a .observations .bg {
+        height: 1500px;
+    }
+
+    .post-its .second {
+        right: 390px;
+    }
+
+    .post-its .ouvert {
+        top: 515px;
+    }
+
+    .post-its .semi-pro {
+        top: 740px;
+    }
+
+    .post-its .collectif {
+        top: 1060px;
+    }
+
+    .post-its .formation {
+        left: 312px;
+        top: 1190px;
+    }
+
+    /* CC */
+
+    .cc .observations .bg {
+        background-position: 0% 2%, 100% 22%, -23% 57%, 23% 40%, 100% 85%, 10% 98%;
+        height: 2200px;
+    }
+
+    .post-its .metz {
+        top: 270px;
+    }
+
+    .post-its .lille {
+        right: 50px;
+        top: 10px;
+    }
+
+    .post-its .strasbourg {
+        top: 710px;
+        right: -20px;
+    }
+
+    .post-its .mulhouse {
+        top: 1115px;
+        right: 260px;
+    }
+
+    .post-its .paris {
+        top: 1410px;
+        left: 17px;
+    }
+
+    .post-its .dunkerque {
+        top: 1790px;
+        right: 20px;
+    }
+
+    /* E */
+    .post-its .acteurs {
+        left: -20px;
+    }
+
+    .post-its .grand-est {
+        top: 560px;
+        left: 310px;
+    }
+
+    /* FL */
+    .post-its .impliquation {
+        right: 30px;
+    }
+
+    .post-its .exception {
+        top: 900px;
+        right: 80px;
+    }
 }
