feat: test stickyHeader

--- a/css/style.css
+++ b/css/style.css
@@ -190,6 +190,12 @@ article {
     display: none;
 }
 
+/* ////////////////////// FOOTER ////////////////////// */
+
+footer {
+    padding-top: 100px;
+}
+
 /* ////////////////////// MAIN ////////////////////// */
 
 /* //////// ACCORDION ///////// */
