feat: add padding-top nav links pages

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -320,6 +320,11 @@
     }
 
     /* /// ABOUT /// */
+    .about .content,
+    .contact .content,
+    .cousins .content {
+        padding-top: 220px;
+    }
 
     .side {
         min-width: 26%;
