--- a/css/responsive.css
+++ b/css/responsive.css
@@ -94,7 +94,7 @@
         font-size: 29px;
     }
 
-    .enseignements h3 {
+    h3 {
         font-size: 21px;
         text-align: left;
     }
@@ -219,40 +219,51 @@
     }
 
     .ce .observations .bg {
-        background-position: 50% 380px, 50% 1020px;
+        background-position: 50% 340px, 50% 940px;
     }
 
     .mp .observations .bg {
-        background-position: 50% 450px, 50% 940px, 50% 2120px, 50% 1570px;
+        background-position: 50% 420px, 50% 900px, 50% 1970px, 50% 1470px;
     }
 
     .p .observations .bg {
-        background-position: 50% 660px, 50% 200px;
+        background-position: 50% 610px, 50% 190px;
     }
 
     .a .observations .bg {
-        background-position: 50% 260px, 50% 890px, 50% 1330px, 50% 1830px, 50% 2320px;
+        background-position: 50% 250px, 50% 870px, 50% 1280px, 50% 1770px, 50% 2240px;
     }
 
     .cc .observations .bg {
-        background-position: 50% 420px, 50% 1100px, 50% 1785px, 50% 2460px, 50% 3760px, 50% 3100px;
+        background-position: 50% 370px, 50% 970px, 50% 1610px, 50% 2220px, 50% 3430px, 50% 2810px;
         padding-bottom: 240px;
     }
 
     .e .observations .bg {
-        background-position: 50% 410px, 50% 1060px, 50% 1610px;
+        background-position: 50% 335px, 50% 940px, 50% 1440px;
     }
 
     .fl .observations .bg {
-        background-position: 50% 770px, 50% 0px, 50% 1590px, 50% 2190px;
+        background-position: 50% 710px, 50% 0px, 50% 1450px, 50% 2000px;
         padding: 240px 0;
     }
 
     /* POST-IT */
+    .post-it .subtitle,
+    .post-it .strong {
+        font-size: 16px;
+    }
+
+    .post-its ul,
+    .post-its p {
+        font-size: 13px;
+    }
 
     .post-it {
         position: initial;
-        width: 375px;
+        width: 100%;
+        min-width: 375px;
+        max-width: 415px;
         min-height: 100%;
         margin: 0 auto;
     }
@@ -303,12 +314,8 @@
         margin: 0 auto;
     }
 
-    .links-box.video figure {
-        padding-bottom: 20px;
-    }
-
-    .temoignages .links-box.video {
-        padding-top: 40px;
+    .temoignages .links-box {
+        padding-top: 50px;
     }
 
     .links-box.video iframe {
@@ -385,8 +392,44 @@
 
     /* / OBSERVATIONS / */
 
+    /* BACKGROUND_IMG */
     .observations .bg {
-        background-size: 60%;
+        background-size: 65%;
+    }
+
+    .ce .observations .bg {
+        background-position: -20% 2%, 110% 84%;
+        height: 900px;
+    }
+
+    .mp .observations .bg {
+        background-position: -10% 3%, 99% 53%, 120% 102%, -20% 69%;
+        height: 1500px;
+    }
+
+    .p .observations .bg {
+        height: 760px;
+    }
+
+    .a .observations .bg {
+        background-position: -2% 2%, 110% 33%, 70% 48%, 10% 69%, 100% 100%;
+        background-size: 45%, 65%, 65%, 65%, 65%;
+        height: 1600px;
+    }
+
+    .cc .observations .bg {
+        background-position: -20% 1%, 110% 20%, -21% 54%, 32% 40%, 100% 84%, -9% 98%;
+        height: 2200px;
+    }
+
+    .e .observations .bg {
+        background-position: 0% 0%, 130% 47%, -8% 100%;
+        height: 1120px;
+    }
+
+    .fl .observations .bg {
+        background-position: 0% 0%, 121% 43%, 62% 100%, -10% 80%;
+        height: 1500px;
     }
 
     /* POST-IT */
@@ -400,196 +443,182 @@
         padding: 0 !important;
     }
 
+    .post-it .subtitle,
+    .post-it .strong {
+        line-height: 1.3;
+    }
+
     /* CE */
-    .ce .observations .bg {
-        background-position: 0% 2%, 110% 84%;
-        height: 900px;
+    .post-it.contrat {
+        top: 35px;
+        right: 30px;
     }
 
-    .post-its .contrat {
-        right: 50px;
-    }
-
-    .post-its .co-financement {
-        top: 250px;
+    .post-it.co-financement {
+        top: 210px;
         right: -20px;
     }
 
-    .post-its .inter-collectivites {
-        top: 340px;
-        left: 50px;
+    .post-it.inter-collectivites {
+        top: 410px;
+        left: 20px;
     }
 
-    .post-its .coordination {
+    .post-it.coordination {
         top: 710px;
         left: 390px;
     }
 
-    .post-its .adhesion {
+    .post-it.adhesion {
+        top: 600px;
         left: -20px;
-        top: 540px;
     }
 
     /* MP */
-    .mp .observations .bg {
-        background-position: 120% 0%, 100% 49%, 110% 100%, 6% 75%;
-        height: 1350px;
+    .post-it.design {
+        top: 0px;
+        right: -30px;
+        z-index: 1;
     }
 
-    .post-its .design {
-        right: 380px;
-        top: -30px;
-    }
-
-    .post-its .coaching {
-        right: -25px;
-        top: 280px;
-    }
-
-    .post-its .sociologie {
+    .post-it.coaching {
         top: 410px;
+        right: 85px;
+    }
+
+    .post-it.sociologie {
+        top: 350px;
         left: -20px;
     }
 
-    .post-its .politiques {
-        top: 780px;
-        right: 30px;
+    .post-it.politiques {
+        top: 940px;
+        right: 20px;
     }
 
-    .post-its .education {
+    .post-it.education {
+        top: 1120px;
         left: 10px;
-        top: 1080px;
     }
 
     /* P */
-    /* .p .observations .bg {
-        height: 800px;
+    .post-it.travail {
+        top: 20px;
+        right: 90px;
     }
 
-    .post-its .travail {
-        right: 120px;
-    }
-
-    .post-its .pedagogie {
-        top: 430px;
-        left: -20px;
-    } */
-
-    /* A */
-    /* .a .observations .bg {
-        background-position: 0% 0%, 120% 24%, 64% 36%, 0% 70%, 100% 100%;
-        background-size: 40%, 60%, 60%, 60%, 60%;
-        height: 1400px;
-    }
-
-    .post-its .second {
-        right: 250px;
-    }
-
-    .post-its .superieur {
-        top: -20px;
-        right: -10px;
-    }
-
-    .post-its .ouvert {
-        top: 515px;
-        left: -20px;
-    }
-
-    .post-its .semi-pro {
-        top: 650px;
-        right: -30px;
-    }
-
-    .post-its .collectif {
-        top: 1040px;
-    }
-
-    .post-its .formation {
-        left: 390px;
-        top: 870px;
-    } */
-
-    /* CC */
-    /* .cc .observations .bg {
-        background-position: 0% 2%, 95% 23%, -10% 35%, 130% 40%, 100% 79%, 0% 98%;
-        height: 2200px;
-    }
-
-    .post-its .metz {
-        top: 210px;
-        left: 40px;
-    }
-
-    .post-its .lille {
-        right: -20px;
-        top: -20px;
-    }
-
-    .post-its .mulhouse {
-        top: 915px;
-        right: 450px;
-    }
-
-    .post-its .strasbourg {
-        top: 980px;
-        right: 70px;
-    }
-
-    .post-its .paris {
-        top: 1760px;
-        left: 415px;
-    }
-
-    .post-its .dunkerque {
-        top: 1365px;
-        right: 393px;
-    } */
-
-    /* E */
-    /* .e .observations .bg {
-        background-position: 0% 0%, 110% 46%, 60% 100%;
-    }
-
-    .post-its .ecosysteme {
-        top: -30px;
+    .post-it.co-construction {
+        top: 180px;
         right: 30px;
     }
 
-    .post-its .acteurs {
-        left: 40px;
-        top: 330px;
+    .post-it.pedagogie {
+        top: 390px;
+        left: -20px;
     }
 
-    .post-its .grand-est {
-        top: 650px;
-        left: 460px;
+    /* A */
+
+    .post-it.second {
+        top: 180px;
+        right: 10px;
+        z-index: 1;
     }
 
-    .post-its .e-dunkerque {
-        top: 730px;
-        right: 450px;
-    } */
+    .post-it.superieur {
+        top: -20px;
+        right: 110px;
+    }
+
+    .post-it.ouvert {
+        top: 525px;
+        left: -10px;
+    }
+
+    .post-it.semi-pro {
+        top: 960px;
+        right: 10px;
+    }
+
+    .post-it.collectif {
+        left: 0px;
+        top: 1120px;
+    }
+
+    .post-it.formation {
+        left: 100px;
+        top: 1370px;
+    }
+
+    /* CC */
+
+    .post-it.metz {
+        top: 320px;
+        left: -20px;
+    }
+
+    .post-it.lille {
+        top: -40px;
+        right: 20px;
+    }
+
+    .post-it.mulhouse {
+        top: 1130px;
+        right: 40px;
+        z-index: 1;
+    }
+
+    .post-it.strasbourg {
+        top: 680px;
+        right: -30px;
+    }
+
+    .post-it.paris {
+        top: 1360px;
+        left: 10px;
+    }
+
+    .post-it.dunkerque {
+        top: 1810px;
+        right: 10px;
+    }
+
+    /* E */
+    .post-it.ecosysteme {
+        top: -30px;
+        right: 20px;
+    }
+
+    .post-it.acteurs {
+        top: 360px;
+        left: 10px;
+    }
+
+    .post-it.grand-est {
+        top: 580px;
+        left: 370px;
+    }
+
+    .post-it.e-dunkerque {
+        top: 840px;
+        right: -20px;
+    }
 
     /* FL */
-    /* .fl .observations .bg {
-        background-position: 0% 5%, 90% 56%, 40% 100%, 0% 83%;
+    .post-it.iterations {
+        top: 50px;
+        right: -20px;
     }
 
-    .post-its .iterations {
-        top: 340px;
+    .post-it.impliquation {
+        top: 300px;
         left: 20px;
     }
 
-    .post-its .impliquation {
+    .post-it.exception {
+        top: 890px;
         right: 10px;
-        top: 0px;
     }
-
-    .post-its .exception {
-        top: 930px;
-        right: -20px;
-    } */
 
     /* / LINKS-BOX / */
 
@@ -601,7 +630,7 @@
         background-size: 80px;
     }
 
-    .temoignages .links-box.video {
+    .links-box.video {
         background-image: none !important;
         padding-top: 46px;
     }
@@ -613,6 +642,45 @@
     .h1,
     .h1 .fixed {
         font-size: 75px;
+    }
+
+    /* /// 7 MECANIQUES /// */
+
+    /* / OBSERVATIONS / */
+
+    /* BACKBROUND-IMG */
+
+    .ce .observations .bg {
+        background-position: 0% 0%, 100% 70%;
+        height: 1000px;
+    }
+
+    .mp .observations .bg {
+        background-position: -10% 3%, 105% 50%, 90% 100%, 10% 74%;
+        height: 1400px;
+    }
+
+    .p .observations .bg {
+        height: 850px;
+    }
+
+    .a .observations .bg {
+        background-position: 0% 0%, 120% 20%, 83% 41%, 20% 71%, 100% 100%;
+        height: 1500px;
+    }
+
+    .cc .observations .bg {
+        background-position: 0% 2%, 100% 21%, -7% 55%, 23% 38%, 100% 84%, 0% 98%;
+        height: 2200px;
+    }
+
+    .e .observations .bg {
+        background-position: 6% 0%, 130% 52%, 17% 100%;
+        height: 1100px;
+    }
+
+    .fl .observations .bg {
+        height: 1400px;
     }
 
     /* POST-IT */
@@ -627,149 +695,172 @@
     }
 
     /* CE */
-    .ce .observations .bg {
-        background-position: 0% 0%, 100% 70%;
-        height: 1000px;
-    }
 
-    .post-its .contrat {
+    .post-it.contrat {
         right: 150px;
     }
 
-    .post-its .co-financement {
+    .post-it.co-financement {
         right: -20px;
     }
 
-    .post-its .inter-collectivites {
+    .post-it.inter-collectivites {
         top: 370px;
         left: 120px;
     }
 
-    .post-its .adhesion {
-        left: 10px;
+    .post-it.adhesion {
         top: 590px;
+        left: 10px;
     }
 
-    .post-its .coordination {
+    .post-it.coordination {
         top: 720px;
         left: 420px;
     }
 
     /* MP */
-    .mp .observations .bg {
-        background-position: -10% 0%, 105% 53%, 90% 100%, 10% 77%;
-        height: 1350px;
-    }
 
-    .post-its .design {
+    .post-it.design {
+        top: 0px;
         right: 230px;
-        top: 10px;
     }
 
-    .post-its .coaching {
+    .post-it.coaching {
+        top: 300px;
         right: -25px;
-        top: 310px;
     }
 
-    .post-its .sociologie {
+    .post-it.sociologie {
         top: 400px;
-        left: 10px;
+        left: 30px;
     }
 
-    .post-its .politiques {
+    .post-it.politiques {
         top: 800px;
         right: 10px;
     }
 
-    .post-its .education {
+    .post-it.education {
+        top: 1120px;
         left: -10px;
-        top: 1100px;
     }
 
     /* P */
-    .post-its .travail {
+    .post-it.travail {
+        top: 20px;
         right: 220px;
     }
 
+    .post-it.co-construction {
+        top: 180px;
+        right: 30px;
+    }
+
+    .post-it.pedagogie {
+        top: 500px;
+        left: 30px;
+    }
+
     /* A */
-    .a .observations .bg {
-        height: 1500px;
+
+    .post-it.second {
+        top: 160px;
+        right: 350px;
+        z-index: 1;
     }
 
-    .post-its .second {
-        right: 390px;
+    .post-it.superieur {
+        top: -40px;
+        right: 50px;
     }
 
-    .post-its .ouvert {
-        top: 515px;
+    .post-it.ouvert {
+        top: 575px;
+        left: -20px;
     }
 
-    .post-its .semi-pro {
-        top: 740px;
+    .post-it.semi-pro {
+        top: 790px;
+        right: 20px;
     }
 
-    .post-its .collectif {
-        top: 1060px;
+    .post-it.collectif {
+        left: 10px;
+        top: 1080px;
     }
 
-    .post-its .formation {
-        left: 312px;
-        top: 1190px;
+    .post-it.formation {
+        left: 200px;
+        top: 1320px;
     }
 
     /* CC */
 
-    .cc .observations .bg {
-        background-position: 0% 2%, 100% 22%, -23% 57%, 23% 40%, 100% 85%, 10% 98%;
-        height: 2200px;
+    .post-it.metz {
+        top: 300px;
+        left: 40px;
     }
 
-    .post-its .metz {
-        top: 270px;
+    .post-it.lille {
+        top: 0px;
+        right: 80px;
     }
 
-    .post-its .lille {
-        right: 50px;
-        top: 10px;
+    .post-it.mulhouse {
+        top: 1110px;
+        right: 210px;
     }
 
-    .post-its .strasbourg {
-        top: 710px;
-        right: -20px;
+    .post-it.strasbourg {
+        top: 720px;
+        right: -30px;
     }
 
-    .post-its .mulhouse {
-        top: 1115px;
-        right: 260px;
+    .post-it.paris {
+        top: 1400px;
+        left: 20px;
     }
 
-    .post-its .paris {
-        top: 1410px;
-        left: 17px;
-    }
-
-    .post-its .dunkerque {
-        top: 1790px;
+    .post-it.dunkerque {
+        top: 1800px;
         right: 20px;
     }
 
     /* E */
-    .post-its .acteurs {
-        left: -20px;
+    .post-it.ecosysteme {
+        top: 30px;
+        right: 70px;
     }
 
-    .post-its .grand-est {
-        top: 560px;
-        left: 310px;
+    .post-it.acteurs {
+        top: 310px;
+        left: -10px;
+    }
+
+    .post-it.grand-est {
+        top: 450px;
+        left: 340px;
+    }
+
+    .post-it.e-dunkerque {
+        top: 830px;
+        right: 20px;
     }
 
     /* FL */
-    .post-its .impliquation {
-        right: 30px;
-    }
+    /* .post-it.iterations {
+        top: 0px;
+        right: 50px;
+    } */
 
-    .post-its .exception {
-        top: 900px;
-        right: 80px;
+    /* .post-it.impliquation {
+        top: 300px;
+        left: 0px;
+    } */
+
+    .post-it.exception {
+        top: 870px;
+        right: 10px;
     }
 }
